--- a/vehiculos/templates/base.html
+++ b/vehiculos/templates/base.html
@@ -17,7 +17,9 @@
     <nav class="navbar">
         <div class="content-left">
             <a href="/">Inicio</a>
-            <a href="/acerca">Acerca de</a>
+            <a href="/acerca">Vuelos</a>
+            <a href="/acerca">Alojamientos</a>
+            <a href="/acerca">Paquetes</a>
         </div>
         <div class="content-right">
             <a class="login" href="/login">Iniciar Sesion</a>
@@ -26,11 +28,26 @@
     </nav>
     <!-- ENTRADA -->
     <div class="entrada">
-        <h1 class="titleEntrada">DS Travel</h1>
+        <h1 class="titleEntrada">DS TRAVEL</h1>
+        <div class="splashEntrada">
+            <h2 class="splashText">Viaja con nosotros, <br> <h2 class="splashVioletText">viaja seguro.</h2></h2>
+            <p>Encontra los mejores descuentos que tenemos para vos.</p>
+            <button class="seeOffer">Ver Ofertas</button>
+        </div>
     </div>
     <!-- DIV INPUT -->
     <div class="inputData">
+        <!-- Falta hacer peor hay que preguntar por los input y esas cosas -->
+    </div>
+    <!-- OFERTAS EXCLUSIVAS -->
+    <div class="ofertasExclusivas">
+        <h1 class="ofertasTitle">Ofertas exclusivas</h1>
+        <p class="muted ofertasDescription">Navega por la web y descubre todos los beneficios que tenemos para vos.</p>
+        <div class="ofertasList">
+            <div class="oferta">
 
+            </div>
+        </div>
     </div>
     <!-- FOOTER -->
     <div class="footer">
