--- a/vehiculos/templates/paginas/login.html
+++ b/vehiculos/templates/paginas/login.html
@@ -28,13 +28,13 @@
     <div class="formularioLogin">
         <div class="formLoginAndDatos">
             <h1 class="titleFormLogin">Iniciar Sesion</h1>
-            <form>
+            <form class="loginForm">
                 <div class="datos">
                     <label>Correo Electronico:</label>
-                    <input type="text" placeholder="ejemplo@hotmail.com">
+                    <input type="text" placeholder="ejemplo@hotmail.com" required>
                     <label>Contraseña:</label>
-                    <input type="password" placeholder="">
-                    <p class="lostPasswordText">Olvidaste tu contraseña? Recuperala aqui.</p>
+                    <input type="password" placeholder="" required> 
+                    <p class="lostPasswordText">Olvidaste tu contraseña? <strong><a class="link">Recuperala aqui.</a></strong></p>
                     <button class="submit">Continuar</button>
                     <h3 class="anotherLogin">Iniciar sesion con:</h3>
                     <div class="alternativeLoginLogos">
