--- a/vehiculos/templates/base.html
+++ b/vehiculos/templates/base.html
@@ -1,6 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@500&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <!-- RECORDAR QUE ESTO ES UNA TEMPLATE NO LA PAGINA COMPLETA -->
     <!-- NAVBAR -->
@@ -30,7 +32,9 @@
     <div class="entrada">
         <h1 class="titleEntrada">DS TRAVEL</h1>
         <div class="splashEntrada">
-            <h2 class="splashText">Viaja con nosotros, <br> <h2 class="splashVioletText">viaja seguro.</h2></h2>
+            <h2 class="splashText">Viaja con nosotros, <br>
+                <h2 class="splashVioletText">viaja seguro.</h2>
+            </h2>
             <p>Encontra los mejores descuentos que tenemos para vos.</p>
             <button class="seeOffer">Ver Ofertas</button>
         </div>
@@ -45,13 +49,107 @@
         <p class="muted ofertasDescription">Navega por la web y descubre todos los beneficios que tenemos para vos.</p>
         <div class="ofertasList">
             <div class="oferta">
-
+                <div class="imgInformation">
+                    <img width="300"
+                        src="https://viajes.nationalgeographic.com.es/medio/2022/07/11/praga_c881ed8b_1280x720.jpg"
+                        alt="Prueba" class="ofertaImg" />
+                    <div class="textOfferImage">
+                        <p>Desde $1999</p>
+                    </div>
+                </div>
+                <div class="ofertaInformation">
+                    <div class="ofertaName">
+                        <h3>Praga</h3>
+                        <p>Republica Checa</p>
+                    </div>
+                    <div class="ofertaRating">
+                        <i class="fa-solid fa-star"></i>
+                        <p>4.7</p>
+                    </div>
+                </div>
             </div>
+            <div class="oferta">
+                <div class="imgInformation">
+                    <img width="300"
+                        src="https://viajes.nationalgeographic.com.es/medio/2022/07/11/praga_c881ed8b_1280x720.jpg"
+                        alt="Prueba" class="ofertaImg" />
+                    <div class="textOfferImage">
+                        <p>Desde $1999</p>
+                    </div>
+                </div>
+                <div class="ofertaInformation">
+                    <div class="ofertaName">
+                        <h3>Praga</h3>
+                        <p>Republica Checa</p>
+                    </div>
+                    <div class="ofertaRating">
+                        <i class="fa-solid fa-star"></i>
+                        <p>4.7</p>
+                    </div>
+                </div>
+            </div>
+            <div class="oferta">
+                <div class="imgInformation">
+                    <img width="300"
+                        src="https://viajes.nationalgeographic.com.es/medio/2022/07/11/praga_c881ed8b_1280x720.jpg"
+                        alt="Prueba" class="ofertaImg" />
+                    <div class="textOfferImage">
+                        <p>Desde $1999</p>
+                    </div>
+                </div>
+                <div class="ofertaInformation">
+                    <div class="ofertaName">
+                        <h3>Praga</h3>
+                        <p>Republica Checa</p>
+                    </div>
+                    <div class="ofertaRating">
+                        <i class="fa-solid fa-star"></i>
+                        <p>4.7</p>
+                    </div>
+                </div>
+            </div>
+            <div class="oferta">
+                <div class="imgInformation">
+                    <img width="300"
+                        src="https://viajes.nationalgeographic.com.es/medio/2022/07/11/praga_c881ed8b_1280x720.jpg"
+                        alt="Prueba" class="ofertaImg" />
+                    <div class="textOfferImage">
+                        <p>Desde $1999</p>
+                    </div>
+                </div>
+                <div class="ofertaInformation">
+                    <div class="ofertaName">
+                        <h3>Praga</h3>
+                        <p>Republica Checa</p>
+                    </div>
+                    <div class="ofertaRating">
+                        <i class="fa-solid fa-star"></i>
+                        <p>4.7</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- PASOS VIAJE -->
+    <div class="pasosFlight">
+        <h1 class="pasosFlightTitle">Tu mejor viaje en 4 pasos</h1>
+        <p class="pasosFlightDescription muted">Nosotros nos encargamos</p>
+        <div class="explainingPasosFlight">
+            <h2>1</h2>
+            <h3>Registrate</h3>
+            <h2>2</h2>
+            <h3>Elegi tu paquete</h3>
+            <h2>3</h2>
+            <h3>Planea tu viaje</h3>
+            <h2>4</h2>
+            <h3>Disfruta</h3>
         </div>
     </div>
     <!-- FOOTER -->
     <div class="footer">
 
     </div>
+    <script src="https://kit.fontawesome.com/e80c9c3cc8.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
