--- a/vehiculos/templates/paginas/login.html
+++ b/vehiculos/templates/paginas/login.html
@@ -61,7 +61,36 @@
     </div>
     <!-- FOOTER -->
     <div class="footer">
-
+        <div class="socialInformation">
+            <h1>DS Travel</h1>
+            <p>Siguenos en nuestras redes y enterate de mucho mas.</p>
+            <div class="socialMediaInformation">
+                <a class="linkSocial"><i class="fa-brands fa-facebook fa-xl" id="iconoSocialFooter"></i></a>
+                <a class="linkSocial"><i class="fa-brands fa-instagram fa-xl" id="iconoSocialFooter"></i></a>
+                <a class="linkSocial"><i class="fa-brands fa-twitter fa-xl" id="iconoSocialFooter"></i></a>
+            </div>
+        </div>
+        <div class="formalInformation">
+            <div class="firstColumnFormalInfo">
+                <h3>Express</h3>
+                <a>Acerca de nosotros</a>
+                <a>Planes</a>
+                <a>Ofertas</a>
+                <a>Politica de Privacidad</a>
+            </div>
+            <div class="secondColumnFormalInfo">
+                <h3>Contacto</h3>
+                <a>Ayuda</a>
+                <a>FAQ</a>
+                <a>Afiliados</a>
+            </div>
+            <div class="thirdColumnFormalInfo">
+                <h3>Mas</h3>
+                <a>Control</a>
+                <a>Nuestro Blog</a>
+                <a>Tips</a>
+            </div>
+        </div>
     </div>
     <!-- FONT AWESOME: importa iconos -->
     <script src="https://kit.fontawesome.com/e80c9c3cc8.js" crossorigin="anonymous"></script>
