--- a/vehiculos/templates/base.html
+++ b/vehiculos/templates/base.html
@@ -151,9 +151,9 @@
             <h1>DS Travel</h1>
             <p>Siguenos en nuestras redes y enterate de mucho mas.</p>
             <div class="socialMediaInformation">
-                <a class="linkSocial"><i class="fa-brands fa-facebook fa-xl" id="icono"></i></a>
-                <a class="linkSocial"><i class="fa-brands fa-instagram fa-xl" id="icono"></i></a>
-                <a class="linkSocial"><i class="fa-brands fa-twitter fa-xl" id="icono"></i></a>
+                <a class="linkSocial"><i class="fa-brands fa-facebook fa-xl" id="iconoSocialFooter"></i></a>
+                <a class="linkSocial"><i class="fa-brands fa-instagram fa-xl" id="iconoSocialFooter"></i></a>
+                <a class="linkSocial"><i class="fa-brands fa-twitter fa-xl" id="iconoSocialFooter"></i></a>
             </div>
         </div>
         <div class="formalInformation">
