--- a/vehiculos/templates/paginas/register.html
+++ b/vehiculos/templates/paginas/register.html
@@ -17,7 +17,9 @@
     <nav class="navbar">
         <div class="content-left">
             <a href="/">Inicio</a>
-            <a href="/acerca">Acerca de</a>
+            <a href="/acerca">Vuelos</a>
+            <a href="/acerca">Alojamientos</a>
+            <a href="/acerca">Paquetes</a>
         </div>
         <div class="content-right">
             <a class="login" href="/login">Iniciar Sesion</a>
