Mini-Fix: Hover Ofertas y Scroll en Ofertas

--- a/vehiculos/static/css/style.css
+++ b/vehiculos/static/css/style.css
@@ -1,5 +1,9 @@
 /* Configuraciones Globales */
 
+html {
+ scroll-behavior: smooth;
+}
+
 :root {
     --color-primario: #691e63;
     --color-primario-oscuro: #42133e;
@@ -213,10 +217,16 @@ nav {
 }
 
 .oferta {
+    transition: 0.5s;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     padding: 10px;
     border-radius: 15px;
     margin-left: 15px;
+}
+
+.oferta:hover {
+    transition: 0.5s;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 4px 8px 0px;
 }
 
 .imgInformation {
