--- a/vehiculos/templates/home.html
+++ b/vehiculos/templates/home.html
@@ -243,6 +243,7 @@
         </div>
     </div>
     <script src="https://kit.fontawesome.com/e80c9c3cc8.js" crossorigin="anonymous"></script>
+   <script src={% static 'js/home.js' %} crossorigin="anonymous"></script> 
 </body>
 
 </html>
