--- a/vehiculos/templates/paginas/login.html
+++ b/vehiculos/templates/paginas/login.html
@@ -51,7 +51,7 @@
             </form>
         </div>
         <div class="imgLogin">
-            <img src={% static 'login.jpg' %} class="imgSource">
+            <img src={% static 'img/login.jpg' %} class="imgSource">
             <div class="registerImgLogin">
                 <div>
                     <h2>¿No tienes una cuenta?</h2>
