--- a/vehiculos/templates/home.html
+++ b/vehiculos/templates/home.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto sobre Gestion Vehicular - Grupo C</title>
+    <title>DS Travel</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,7 +40,7 @@
         </div>
     </div>
     <!-- DIV INPUT -->
-    <form>
+    <form enctype="multipart/form-data" method="post">
         <div class="inputCenter">
             <div class="inputData">
                 <div class="inputDataSelectionFirst">
