Fix Checkbox Input HOME

--- a/vehiculos/templates/home.html
+++ b/vehiculos/templates/home.html
@@ -45,23 +45,23 @@
             <div class="inputData">
                 <div class="inputDataSelectionFirst">
                     <div class="input">
-                        <input type="checkbox" />
+                        <input type="checkbox" id="check1" onclick="checkSelection(this.id)"/>
                         <label>Todo Incluido</label>
                     </div>
                     <div class="input">
-                        <input type="checkbox" />
+                        <input type="checkbox" id="check2" onclick="checkSelection(this.id)"/>
                         <label>Vuelos</label>
                     </div>
                     <div class="input">
-                        <input type="checkbox" />
+                        <input type="checkbox" id="check3" onclick="checkSelection(this.id)"/>
                         <label>Hoteles</label>
                     </div>
                     <div class="input">
-                        <input type="checkbox" />
+                        <input type="checkbox" id="check4" onclick="checkSelection(this.id)"/>
                         <label>Autos</label>
                     </div>
                     <div class="input">
-                        <input type="checkbox" />
+                        <input type="checkbox" id="check5" onclick="checkSelection(this.id)"/>
                         <label>Paquetes</label>
                     </div>
                 </div>
@@ -69,15 +69,15 @@
                     <p>Escoge uno o mas para crear tu proximo viaje:</p>
                     <div class="chooseRowFlight">
                         <div class="input">
-                            <input type="checkbox" />
+                            <input type="checkbox" id="checkbox1" onclick="checkSelection2(this.id)" />
                             <label>Hotel</label>
                         </div>
                         <div class="input">
-                            <input type="checkbox" />
+                            <input type="checkbox" id="checkbox2" onclick="checkSelection2(this.id)"/>
                             <label>Vuelo</label>
                         </div>
                         <div class="input">
-                            <input type="checkbox" />
+                            <input type="checkbox" id="checkbox3" onclick="checkSelection2(this.id)"/>
                             <label>Auto</label>
                         </div>
                     </div>
