--- a/vehiculos/templates/home.html
+++ b/vehiculos/templates/home.html
@@ -40,73 +40,7 @@
         </div>
     </div>
     <!-- DIV INPUT -->
-    <form enctype="multipart/form-data" method="post">
-        <div class="inputCenter">
-            <div class="inputData">
-                <div class="inputDataSelectionFirst">
-                    <div class="input">
-                        <input type="checkbox" id="check1" onclick="checkSelection(this.id)"/>
-                        <label>Todo Incluido</label>
-                    </div>
-                    <div class="input">
-                        <input type="checkbox" id="check2" onclick="checkSelection(this.id)"/>
-                        <label>Vuelos</label>
-                    </div>
-                    <div class="input">
-                        <input type="checkbox" id="check3" onclick="checkSelection(this.id)"/>
-                        <label>Hoteles</label>
-                    </div>
-                    <div class="input">
-                        <input type="checkbox" id="check4" onclick="checkSelection(this.id)"/>
-                        <label>Autos</label>
-                    </div>
-                    <div class="input">
-                        <input type="checkbox" id="check5" onclick="checkSelection(this.id)"/>
-                        <label>Paquetes</label>
-                    </div>
-                </div>
-                <div class="chooseFlight">
-                    <p>Escoge uno o mas para crear tu proximo viaje:</p>
-                    <div class="chooseRowFlight">
-                        <div class="input">
-                            <input type="checkbox" id="checkbox1" onclick="checkSelection2(this.id)" />
-                            <label>Hotel</label>
-                        </div>
-                        <div class="input">
-                            <input type="checkbox" id="checkbox2" onclick="checkSelection2(this.id)"/>
-                            <label>Vuelo</label>
-                        </div>
-                        <div class="input">
-                            <input type="checkbox" id="checkbox3" onclick="checkSelection2(this.id)"/>
-                            <label>Auto</label>
-                        </div>
-                    </div>
-                </div>
-                <div class="dateInfoFlight">
-                    <!-- Van a ser input con sugerencias -->
-                    <input type="text" placeholder="Origen"/>
-                    <input type="text" placeholder="Destino"/>
-                    <input type="date" placeholder="Origen"/>
-                    <input type="date" placeholder="Origen"/>
-                </div>
-                <div class="secondaryInfoFlight">
-                    <select>
-                        <option value="idaVuelta">Ida y vuelta</option>
-                        <option value="onlyIda">Solo Ida</option>
-                    </select>
-                    <select>
-                        <option value="one">1</option>
-                        <option value="two">2</option>
-                        <option value="three">3</option>
-                        <option value="four">4</option>
-                    </select>
-                </div>
-                <div class="submitDataDiv">
-                    <button type="submit" class="submitDataFromHome">Continuar</button>
-                </div>
-            </div>
-        </div>        
-    </form>
+    {% include 'formulario.html' %}
     <!-- OFERTAS EXCLUSIVAS -->
     <div class="ofertasExclusivas">
         <h1 class="ofertasTitle">Ofertas exclusivas</h1>
